Fix build error: remove main.scss file causing import errors

--- a/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
+++ b/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
@@ -2,8 +2,8 @@
 layout: post
 title: "클라우드 시큐리티 과정 7기 - 3주차 AWS 보안 및 Finops"
 date: 2025-05-02 00:41:54 +0900
-categories: [IT, DevSecOps, 코딩]
-tags: []
+categories: cloud
+tags: [AWS, FinOps, Cloud-Security]
 comments: true
 original_url: https://twodragon.tistory.com/679
 ---
