--- a/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
+++ b/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
@@ -2,8 +2,8 @@
 layout: post
 title: "클라우드 시큐리티 과정 7기 - 9주차 DevSecOps 통합 정리"
 date: 2025-06-13 23:48:33 +0900
-categories: [IT, DevSecOps, 코딩]
-tags: []
+categories: devsecops
+tags: [DevSecOps, Integration, Cloud-Security]
 comments: true
 original_url: https://twodragon.tistory.com/691
 ---
