--- a/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
+++ b/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
@@ -2,8 +2,8 @@
 layout: post
 title: "[긴급] npm 생태계 대규모 보안 침해: 20억 다운로드 패키지 악성코드 감염"
 date: 2025-09-10 18:17:45 +0900
-categories: [IT, DevSecOps, 코딩]
-tags: []
+categories: incident
+tags: [npm, Supply-Chain, Malware, Security-Incident]
 comments: true
 original_url: https://twodragon.tistory.com/692
 ---
