--- a/_posts/2025-10-02-Karpenter_v153_노드_통합으로_인한_대규모_장애_분석_및_해결기.md
+++ b/_posts/2025-10-02-Karpenter_v153_노드_통합으로_인한_대규모_장애_분석_및_해결기.md
@@ -2,8 +2,8 @@
 layout: post
 title: "Karpenter v1.5.3 노드 통합으로 인한 대규모 장애 분석 및 해결기"
 date: 2025-10-02 17:25:43 +0900
-categories: [IT, DevSecOps, 코딩]
-tags: []
+categories: incident
+tags: [Karpenter, Kubernetes, AWS, Post-Mortem, Incident]
 comments: true
 original_url: https://twodragon.tistory.com/695
 ---
