--- a/_posts/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.md
+++ b/_posts/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.md
@@ -2,8 +2,8 @@
 layout: post
 title: "클라우드 시큐리티 8기 1주차: 인프라의 본질부터 보안의 미래까지"
 date: 2025-11-26 19:36:52 +0900
-categories: [IT, DevSecOps, 코딩]
-tags: []
+categories: cloud
+tags: [Infrastructure, Cloud-Security, AWS]
 comments: true
 original_url: https://twodragon.tistory.com/701
 ---
