--- a/_posts/2025-12-19-클라우드_시큐리티_8기_4주차_통합_보안_취약점_점검_및_ISMS-P_인증_대응_실무.md
+++ b/_posts/2025-12-19-클라우드_시큐리티_8기_4주차_통합_보안_취약점_점검_및_ISMS-P_인증_대응_실무.md
@@ -2,8 +2,8 @@
 layout: post
 title: "클라우드 시큐리티 8기 4주차: 통합 보안 취약점 점검 및 ISMS-P 인증 대응 실무"
 date: 2025-12-19 15:31:44 +0900
-categories: [IT, DevSecOps, 코딩]
-tags: []
+categories: security
+tags: [Vulnerability, ISMS-P, Compliance, Security-Audit]
 comments: true
 original_url: https://twodragon.tistory.com/705
 ---
