--- a/_posts/2025-04-30-공용_PC에서도_안전하게_패스키_OTP_강력한_암호_관리_활용법.md
+++ b/_posts/2025-04-30-공용_PC에서도_안전하게_패스키_OTP_강력한_암호_관리_활용법.md
@@ -2,8 +2,8 @@
 layout: post
 title: "공용 PC에서도 안전하게!  패스키, OTP, 강력한 암호 관리 활용법"
 date: 2025-04-30 19:51:25 +0900
-categories: [IT, DevSecOps, 코딩]
-tags: []
+categories: security
+tags: [Passkey, OTP, Password-Manager, Authentication]
 comments: true
 original_url: https://twodragon.tistory.com/678
 ---
