--- a/_posts/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.md
+++ b/_posts/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.md
@@ -2,8 +2,8 @@
 layout: post
 title: "클라우드 보안 과정 7기 - 4주차 AWS 취약점 점검 및 ISMS 대응 가이드"
 date: 2025-05-09 17:35:20 +0900
-categories: [IT, DevSecOps, 코딩]
-tags: []
+categories: cloud
+tags: [AWS, ISMS, Vulnerability, Compliance]
 comments: true
 original_url: https://twodragon.tistory.com/682
 ---
