--- a/_posts/2025-09-16-AWS_reInforce_2025_클라우드_보안의_현재와_미래_.md
+++ b/_posts/2025-09-16-AWS_reInforce_2025_클라우드_보안의_현재와_미래_.md
@@ -2,8 +2,8 @@
 layout: post
 title: "AWS re:Inforce 2025: 클라우드 보안의 현재와 미래  ️"
 date: 2025-09-16 23:09:44 +0900
-categories: [IT, DevSecOps, 코딩]
-tags: []
+categories: cloud
+tags: [AWS, reInforce, Cloud-Security, Conference]
 comments: true
 original_url: https://twodragon.tistory.com/693
 ---
