Feat: Add Nano Banana images for all posts and update layouts

--- a/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
+++ b/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
@@ -8,6 +8,7 @@ excerpt: "안녕하세요, **Twodragon**입니다. 이번 포스트에서는 클
 comments: true
 toc: true
 original_url: https://twodragon.tistory.com/691
+image: /assets/images/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.svg
 ---
 
 ## 📋 포스팅 요약
