--- a/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
+++ b/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
@@ -8,6 +8,7 @@ excerpt: "2025년 9월 8일 npm 레지스트리의 18개 핵심 패키지(debug,
 comments: true
 toc: true
 original_url: https://twodragon.tistory.com/692
+image: /assets/images/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.svg
 ---
 
 > **즉시 조치 필요**: 2025년 9월 8일 발생한 npm 역사상 최악의 서플라이체인 공격
