--- a/_posts/2025-09-16-AWS_reInforce_2025_클라우드_보안의_현재와_미래_.md
+++ b/_posts/2025-09-16-AWS_reInforce_2025_클라우드_보안의_현재와_미래_.md
@@ -7,6 +7,7 @@ tags: [AWS, reInforce, Cloud-Security, Conference]
 excerpt: "들어가며 2025년 6월 필라델피아에서 개최된 AWS re:Inforce는 5,800명의 보안 전문가들이 모여 클라우드 보안의 최신 트렌드와 기술을 공유하는 장이었습니다. 특히 한국 참가자가 전년 대비 2배 증가하며 국내 기업들의 클라우드 보안에 대한 관심이 높아지고 있음을 보여주었습니다 . 이번 포스트에서는 콘퍼런스의 주요 업데이트와 함께 다양한 관점에서의 보안 인사이트를 공유합니다:"
 comments: true
 original_url: https://twodragon.tistory.com/693
+image: /assets/images/2025-09-16-AWS_reInforce_2025_클라우드_보안의_현재와_미래_.svg
 ---
 ## 📋 포스팅 요약
 
