--- a/_posts/2025-04-30-공용_PC에서도_안전하게_패스키_OTP_강력한_암호_관리_활용법.md
+++ b/_posts/2025-04-30-공용_PC에서도_안전하게_패스키_OTP_강력한_암호_관리_활용법.md
@@ -7,6 +7,7 @@ tags: [Passkey, OTP, Password-Manager, Authentication]
 excerpt: "안녕하세요! 여러분의 IT 라이프를 위한 꿀팁을 전하는 블로거입니다. 카페, 도서관 등 공용 PC를 사용해야 할 때 개인 정보나 계정 보안 때문에 찜찜했던 경험, 다들 있으시죠? 비밀번호 입력도 조심스럽고, 로그아웃은 제대로 했는지 불안하기도 하고요. 오늘은 이러한 걱정을 덜어줄 강력한 인증 및 암호 관리 방법들을 종합적으로 알아보고, 공용 PC에서도 개인 정보를 안전하게 지키는 방법을 소개해 드리려고 합니다! .."
 comments: true
 original_url: https://twodragon.tistory.com/678
+image: /assets/images/2025-04-30-공용_PC에서도_안전하게_패스키_OTP_강력한_암호_관리_활용법.svg
 ---
 ## 📋 포스팅 요약
 
