--- a/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
+++ b/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
@@ -8,6 +8,7 @@ excerpt: "클라우드 보안 과정 7기 3주차에서 다룬 AWS 보안 및 Fi
 comments: true
 toc: true
 original_url: https://twodragon.tistory.com/679
+image: /assets/images/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.svg
 ---
 
 안녕하세요, **Twodragon**입니다.
