--- a/_posts/2025-12-19-클라우드_시큐리티_8기_4주차_통합_보안_취약점_점검_및_ISMS-P_인증_대응_실무.md
+++ b/_posts/2025-12-19-클라우드_시큐리티_8기_4주차_통합_보안_취약점_점검_및_ISMS-P_인증_대응_실무.md
@@ -7,6 +7,7 @@ tags: [Vulnerability, ISMS-P, Compliance, Security-Audit]
 excerpt: "안녕하세요, Twodragon입니다. 이번 클라우드 시큐리티 과정 8기 4주차에서는 통합 보안 취약점 점검 및 ISMS-P 인증 대응을 중심으로, 실무에서 즉시 활용 가능한 필수 보안 역량을 다졌습니다. 강의는 집중력 향상과 피로도 최소화를 위해 20분 발표 + 5분 휴식 사이클로 진행되었으며, 이론뿐만 아니라 실질적인 자동화 도구와 가이드를 활용한 실습이 포함되었습니다."
 comments: true
 original_url: https://twodragon.tistory.com/705
+image: /assets/images/2025-12-19-클라우드_시큐리티_8기_4주차_통합_보안_취약점_점검_및_ISMS-P_인증_대응_실무.svg
 ---
 ## 📋 포스팅 요약
 
