--- a/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
+++ b/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
@@ -17,6 +17,21 @@ image: /assets/images/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20
 
 > **카테고리**: incident
 
+> **태그**: npm, Supply-Chain, Malware, Security-Incident, JavaScript, Node.js
+
+> **핵심 내용**: 
+> 2025년 9월 8일 npm 레지스트리의 18개 핵심 패키지(debug, chalk 등)가 악성코드에 감염되었습니다. 주당 20억 회 이상 다운로드되는 패키지들이 침해되어 전 세계 수백만 프로젝트가 위험에 노출되었습니다. 즉시 확인이 필요합니다.
+
+> **주요 기술/도구**: npm, Supply-Chain, Malware, Security-Incident, JavaScript, Node.js
+
+> **대상 독자**: 클라우드 보안 전문가, DevOps 엔지니어, 보안 담당자
+
+> ---
+
+> *이 포스팅은 AI(Cursor, Claude 등)가 쉽게 이해하고 활용할 수 있도록 구조화된 요약을 포함합니다.*
+
+> **카테고리**: incident
+
 
 
 
