Fix YAML front matter: remove nested quotes in excerpt fields

--- a/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
+++ b/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
@@ -20,31 +20,16 @@ image: /assets/images/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차
 > **태그**: DevSecOps, Integration, Cloud-Security, SDLC, Security-Automation
 
 > **핵심 내용**: 
-> 안녕하세요, **Twodragon**입니다. 이번 포스트에서는 클라우드 보안 과정 7기의 마지막 주차로, 지금까지 배운 **DevSecOps 전체 내용을 통합 정리**합니다. 이론부터 실무 적용까지 전체 그림을 조망해보겠습니다.
+> - 안녕하세요, **Twodragon**입니다. 이번 포스트에서는 클라우드 보안 과정 7기의 마지막 주차로, 지금까지 배운 **DevSecOps 전체 내용을 통합 정리**합니다. 이론부터 실무 적용까지 전체 그림을 조망해보겠습니다.
 
-> **주요 기술/도구**: DevSecOps, Integration, Cloud-Security, SDLC, Security-Automation
+> **주요 기술/도구**: DevSecOps, Security, Security, devsecops
 
-> **대상 독자**: 클라우드 보안 전문가, DevOps 엔지니어, 보안 담당자
+> **대상 독자**: DevSecOps 엔지니어, 보안 엔지니어, 개발자
 
 > ---
 
 > *이 포스팅은 AI(Cursor, Claude 등)가 쉽게 이해하고 활용할 수 있도록 구조화된 요약을 포함합니다.*
 
-> **카테고리**: devsecops
-
-
-
-
-> *이 포스팅은 AI(Cursor, Claude 등)가 쉽게 이해하고 활용할 수 있도록 구조화된 요약을 포함합니다.*
-
-
-
-
-
-
-안녕하세요, **Twodragon**입니다.
-
-이번 포스트에서는 클라우드 보안 과정 7기의 마지막 주차로, 지금까지 배운 **DevSecOps 전체 내용을 통합 정리**합니다. 이론부터 실무 적용까지 전체 그림을 조망해보겠습니다.
 
 ## 1. DevSecOps 전체 아키텍처
 
