Update all posts with new AI summary card format
- Convert blockquote-based summaries to unified HTML card design
- Apply consistent category CSS classes (security, cloud, blockchain)
- Extract meaningful highlights as structured list items
- Clean up duplicate entries in technology/tools fields
- 28 posts updated with improved UI/UX

--- a/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
+++ b/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
@@ -11,24 +11,50 @@ original_url: https://twodragon.tistory.com/679
 image: /assets/images/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.svg
 ---
 
-## 📋 포스팅 요약
-
-> **제목**: 클라우드 시큐리티 과정 7기 - 3주차: AWS 보안 및 FinOps
-
-> **카테고리**: cloud
-
-> **태그**: AWS, FinOps, Cloud-Security, Cost-Optimization, Well-Architected
-
-> **핵심 내용**: 
-> - 클라우드 보안 과정 7기 3주차에서 다룬 AWS 보안 및 FinOps, 아키텍처 심화 내용을 정리했습니다. AWS 환경에서의 보안 강화 및 아키텍처 최적화, 실무에 바로 적용 가능한 FinOps 전략을 다룹니다.
-
-> **주요 기술/도구**: AWS, FinOps, Security, cloud
-
-> **대상 독자**: 클라우드 아키텍트, DevOps 엔지니어, 클라우드 관리자
-
-> ---
-
-> *이 포스팅은 AI(Cursor, Claude 등)가 쉽게 이해하고 활용할 수 있도록 구조화된 요약을 포함합니다.*
+<div class="ai-summary-card">
+<div class="ai-summary-header">
+  <span class="ai-badge">AI 요약</span>
+</div>
+<div class="ai-summary-content">
+  <div class="summary-row">
+    <span class="summary-label">제목</span>
+    <span class="summary-value">클라우드 시큐리티 과정 7기 - 3주차: AWS 보안 및 FinOps</span>
+  </div>
+  <div class="summary-row">
+    <span class="summary-label">카테고리</span>
+    <span class="summary-value"><span class="category-tag cloud">Cloud</span></span>
+  </div>
+  <div class="summary-row">
+    <span class="summary-label">태그</span>
+    <span class="summary-value tags">
+      <span class="tag">AWS</span>
+      <span class="tag">FinOps</span>
+      <span class="tag">Cloud-Security</span>
+      <span class="tag">Cost-Optimization</span>
+      <span class="tag">Well-Architected</span>
+    </span>
+  </div>
+  <div class="summary-row highlights">
+    <span class="summary-label">핵심 내용</span>
+    <ul class="summary-list">
+      <li>AWS 보안 서비스 전체 구조 및 IAM 보안 모범 사례</li>
+      <li>FinOps 프레임워크 및 비용 최적화 전략</li>
+      <li>AWS 환경에서의 보안 강화 및 아키텍처 최적화</li>
+    </ul>
+  </div>
+  <div class="summary-row">
+    <span class="summary-label">기술/도구</span>
+    <span class="summary-value">AWS, FinOps, GuardDuty, Security Hub</span>
+  </div>
+  <div class="summary-row">
+    <span class="summary-label">대상 독자</span>
+    <span class="summary-value">클라우드 아키텍트, DevOps 엔지니어, 클라우드 관리자</span>
+  </div>
+</div>
+<div class="ai-summary-footer">
+  이 포스팅은 AI가 쉽게 이해하고 활용할 수 있도록 구조화된 요약을 포함합니다.
+</div>
+</div>
 
 
 ## 1. AWS 보안 아키텍처
