--- a/_posts/2025-10-02-Karpenter_v153_노드_통합으로_인한_대규모_장애_분석_및_해결기.md
+++ b/_posts/2025-10-02-Karpenter_v153_노드_통합으로_인한_대규모_장애_분석_및_해결기.md
@@ -11,24 +11,51 @@ original_url: https://twodragon.tistory.com/695
 image: /assets/images/2025-10-02-Karpenter_v153_노드_통합으로_인한_대규모_장애_분석_및_해결기.svg
 ---
 
-## 📋 포스팅 요약
-
-> **제목**: Karpenter v1.5.3 노드 통합으로 인한 대규모 장애 분석 및 해결기
-
-> **카테고리**: incident
-
-> **태그**: Karpenter, Kubernetes, AWS, Post-Mortem, Incident, EKS
-
-> **핵심 내용**: 
-> - Karpenter v1.5.3의 공격적인 노드 통합(Consolidation) 정책과 PodDisruptionBudget 미설정으로 인해 프로덕션 환경에서 20개 이상의 Pod가 동시에 재시작되며 약 10분간 서비스 장애가 발생했습니다. 이 글에서는 장애의 근본 원인 분석부터 해결 방안까지 상세히 다룹니다.
-
-> **주요 기술/도구**: Kubernetes, AWS, incident
-
-> **대상 독자**: SRE, 인시던트 대응 담당자, 운영 엔지니어
-
-> ---
-
-> *이 포스팅은 AI(Cursor, Claude 등)가 쉽게 이해하고 활용할 수 있도록 구조화된 요약을 포함합니다.*
+<div class="ai-summary-card">
+<div class="ai-summary-header">
+  <span class="ai-badge">AI 요약</span>
+</div>
+<div class="ai-summary-content">
+  <div class="summary-row">
+    <span class="summary-label">제목</span>
+    <span class="summary-value">Karpenter v1.5.3 노드 통합으로 인한 대규모 장애 분석 및 해결기</span>
+  </div>
+  <div class="summary-row">
+    <span class="summary-label">카테고리</span>
+    <span class="summary-value"><span class="category-tag security">Incident</span></span>
+  </div>
+  <div class="summary-row">
+    <span class="summary-label">태그</span>
+    <span class="summary-value tags">
+      <span class="tag">Karpenter</span>
+      <span class="tag">Kubernetes</span>
+      <span class="tag">AWS</span>
+      <span class="tag">Post-Mortem</span>
+      <span class="tag">Incident</span>
+      <span class="tag">EKS</span>
+    </span>
+  </div>
+  <div class="summary-row highlights">
+    <span class="summary-label">핵심 내용</span>
+    <ul class="summary-list">
+      <li>Karpenter v1.5.3 공격적 노드 통합 정책으로 인한 장애 분석</li>
+      <li>PodDisruptionBudget 미설정으로 20개 이상 Pod 동시 재시작</li>
+      <li>NodePool 설정 수정 및 PDB 적용을 통한 재발 방지 대책</li>
+    </ul>
+  </div>
+  <div class="summary-row">
+    <span class="summary-label">기술/도구</span>
+    <span class="summary-value">Karpenter, Kubernetes, AWS EKS, PodDisruptionBudget</span>
+  </div>
+  <div class="summary-row">
+    <span class="summary-label">대상 독자</span>
+    <span class="summary-value">SRE, 인시던트 대응 담당자, 운영 엔지니어</span>
+  </div>
+</div>
+<div class="ai-summary-footer">
+  이 포스팅은 AI가 쉽게 이해하고 활용할 수 있도록 구조화된 요약을 포함합니다.
+</div>
+</div>
 
 
 ## 1. 사건의 시작
