--- a/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
+++ b/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
@@ -11,24 +11,51 @@ original_url: https://twodragon.tistory.com/692
 image: /assets/images/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.svg
 ---
 
-## 📋 포스팅 요약
-
-> **제목**: [긴급] npm 생태계 대규모 보안 침해: 20억 다운로드 패키지 악성코드 감염
-
-> **카테고리**: incident
-
-> **태그**: npm, Supply-Chain, Malware, Security-Incident, JavaScript, Node.js
-
-> **핵심 내용**: 
-> - 2025년 9월 8일 npm 레지스트리의 18개 핵심 패키지(debug, chalk 등)가 악성코드에 감염되었습니다. 주당 20억 회 이상 다운로드되는 패키지들이 침해되어 전 세계 수백만 프로젝트가 위험에 노출되었습니다. 즉시 확인이 필요합니다.
-
-> **주요 기술/도구**: Security, incident
-
-> **대상 독자**: SRE, 인시던트 대응 담당자, 운영 엔지니어
-
-> ---
-
-> *이 포스팅은 AI(Cursor, Claude 등)가 쉽게 이해하고 활용할 수 있도록 구조화된 요약을 포함합니다.*
+<div class="ai-summary-card">
+<div class="ai-summary-header">
+  <span class="ai-badge">AI 요약</span>
+</div>
+<div class="ai-summary-content">
+  <div class="summary-row">
+    <span class="summary-label">제목</span>
+    <span class="summary-value">[긴급] npm 생태계 대규모 보안 침해: 20억 다운로드 패키지 악성코드 감염</span>
+  </div>
+  <div class="summary-row">
+    <span class="summary-label">카테고리</span>
+    <span class="summary-value"><span class="category-tag security">Incident</span></span>
+  </div>
+  <div class="summary-row">
+    <span class="summary-label">태그</span>
+    <span class="summary-value tags">
+      <span class="tag">npm</span>
+      <span class="tag">Supply-Chain</span>
+      <span class="tag">Malware</span>
+      <span class="tag">Security-Incident</span>
+      <span class="tag">JavaScript</span>
+      <span class="tag">Node.js</span>
+    </span>
+  </div>
+  <div class="summary-row highlights">
+    <span class="summary-label">핵심 내용</span>
+    <ul class="summary-list">
+      <li>npm 레지스트리 18개 핵심 패키지(debug, chalk 등) 악성코드 감염</li>
+      <li>주당 20억 회 이상 다운로드 패키지 침해로 수백만 프로젝트 위험 노출</li>
+      <li>영향 확인 스크립트 및 긴급 복구 절차 가이드</li>
+    </ul>
+  </div>
+  <div class="summary-row">
+    <span class="summary-label">기술/도구</span>
+    <span class="summary-value">npm, Node.js, SBOM, lockfile-lint</span>
+  </div>
+  <div class="summary-row">
+    <span class="summary-label">대상 독자</span>
+    <span class="summary-value">SRE, 인시던트 대응 담당자, 운영 엔지니어</span>
+  </div>
+</div>
+<div class="ai-summary-footer">
+  이 포스팅은 AI가 쉽게 이해하고 활용할 수 있도록 구조화된 요약을 포함합니다.
+</div>
+</div>
 
 
 ## 긴급 공지
