--- a/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
+++ b/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
@@ -10,6 +10,7 @@ toc: true
 original_url: https://twodragon.tistory.com/679
 image: /assets/images/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.svg
 ---
+--
 
 <div class="ai-summary-card">
 <div class="ai-summary-header">
@@ -55,6 +56,11 @@ image: /assets/images/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차
   이 포스팅은 AI가 쉽게 이해하고 활용할 수 있도록 구조화된 요약을 포함합니다.
 </div>
 </div>
+
+
+
+![포스트 이미지](/assets/images/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops_image.png)
+*그림: 포스트 이미지*
 
 
 ## 1. AWS 보안 아키텍처
