--- a/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
+++ b/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
@@ -10,6 +10,7 @@ toc: true
 original_url: https://twodragon.tistory.com/692
 image: /assets/images/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.svg
 ---
+--
 
 <div class="ai-summary-card">
 <div class="ai-summary-header">
@@ -56,6 +57,11 @@ image: /assets/images/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20
   이 포스팅은 AI가 쉽게 이해하고 활용할 수 있도록 구조화된 요약을 포함합니다.
 </div>
 </div>
+
+
+
+![포스트 이미지](/assets/images/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염_image.jpg)
+*그림: 포스트 이미지*
 
 
 ## 긴급 공지
