fix: 모든 포스트 이미지 경로를 relative_url 필터로 수정
- 28개 포스트 파일의 이미지 경로를 절대 경로에서 relative_url 필터 사용으로 변경
- baseurl(/tech-blog)이 올바르게 적용되어 이미지 404 오류 해결
- 모든 포스트에서 일관된 이미지 경로 처리

--- a/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
+++ b/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
@@ -60,7 +60,7 @@ image: /assets/images/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20
 
 
 
-![포스트 이미지](/assets/images/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염_image.jpg)
+![포스트 이미지]({{ '/assets/images/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염_image.jpg' | relative_url }})
 *그림: 포스트 이미지*
 
 
