--- a/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
+++ b/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
@@ -59,7 +59,7 @@ image: /assets/images/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차
 
 
 
-![포스트 이미지](/assets/images/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops_image.png)
+![포스트 이미지]({{ '/assets/images/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops_image.png' | relative_url }})
 *그림: 포스트 이미지*
 
 
