--- a/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
+++ b/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
@@ -59,7 +59,7 @@ image: /assets/images/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차
 
 
 
-![포스트 이미지]({{ '/assets/images/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리_image.png' | relative_url }})
+<img src="{{ '/assets/images/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리_image.png' | relative_url }}" alt="포스트 이미지" loading="lazy" class="post-image">
 *그림: 포스트 이미지*
 
 
