fix: 블록체인 포스트 이미지 수정 완료
- Front matter의 image 필드를 올바른 포스트 이미지로 변경
- 본문에서 중복된 이미지 제거하여 헤더 이미지만 표시되도록 수정
- 포스트 헤더에 올바른 메인 이미지가 표시되도록 개선

--- a/_posts/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.md
+++ b/_posts/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.md
@@ -4,7 +4,7 @@ title: "클라우드 보안 과정 7기 - 4주차 AWS 취약점 점검 및 ISMS 
 date: 2025-05-09 17:35:20 +0900
 categories: cloud
 tags: [AWS, ISMS, Vulnerability, Compliance]
-excerpt: "안녕하세요, Twodragon입니다.이번 4주차에서는 AWS 취약점 점검 및 ISMS-P 인증 대응을 중심으로 실무에 꼭 필요한 보안 역량을 다집니다. 강의는 20분 발표 + 5분 휴식으로 구성되며, 집중력 향상과 피로도 최소화를 목표로 합니다. 10:00 - 10:20 근황 토크 &amp; 과제 피드백 한 주간의 근황 공유 및 토론"
+excerpt: "안녕하세요, Twodragon입니다.이번 4주차에서는 AWS 취약점 점검 및 ISMS-P 인증 대응을 중심으로 실무에 꼭 필요한 보안 역량을 다집니다. 강의는 20분 발표 + 5분 휴식으로 구성되며, 집중력 향상과 피로도 최소화를 목표로 합니다. 10:00 - 10:20 근황 토크 & 과제 피드백 한 주간의 근황 공유 및 토론"
 comments: true
 original_url: https://twodragon.tistory.com/682
 image: /assets/images/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.svg
