--- a/_posts/2025-10-02-Karpenter_v153_노드_통합으로_인한_대규모_장애_분석_및_해결기.md
+++ b/_posts/2025-10-02-Karpenter_v153_노드_통합으로_인한_대규모_장애_분석_및_해결기.md
@@ -345,6 +345,7 @@ spec:
 
 ### 6.1 Karpenter 알림 설정
 
+{% raw %}
 ```yaml
 # Prometheus Alert Rules
 apiVersion: monitoring.coreos.com/v1
@@ -374,6 +375,7 @@ spec:
  annotations:
  summary: "Karpenter consolidation in progress"
 ```
+{% endraw %}
 
 ### 6.2 Datadog 대시보드
 
