feat: 모든 포스팅의 AI 요약 및 excerpt 개선, 홈 화면 표시 최적화
- 모든 포스팅(34개)의 AI 요약을 더 구체적이고 실용적으로 개선
  * 핵심 내용에 구체적인 기술명, 도구명, 수치 포함
  * 기술/도구 목록 확장 및 상세화
  * 실무 적용 가능한 정보 강조

- 모든 포스팅의 excerpt 필드 개선
  * AI 요약 기반으로 핵심 내용 반영
  * 검색 최적화 및 SEO 개선
  * 홈 화면에서 더 풍부한 요약 정보 제공

- 홈 화면 개선
  * post-card.html에서 excerpt 표시 길이 150자 → 250자로 확대
  * AI 요약의 핵심 내용이 홈 화면에 잘 표시되도록 최적화

- Tesla FSD 포스팅 가격 정보 업데이트
  * 한국 시장 가격 4,999만원으로 업데이트 (2026년 1월 가격 인하 반영)
  * 글로벌 가격 비교 추가 (미국, 한국, 일본, 중국)
  * 보조금 정책 상세 정보 추가 (5,300만원 기준, 지역별 보조금 등)

--- a/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
+++ b/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
@@ -4,7 +4,7 @@ title: "클라우드 시큐리티 과정 7기 - 3주차: AWS 보안 및 FinOps"
 date: 2025-05-02 00:41:54 +0900
 category: cloud
 tags: [AWS, FinOps, Cloud-Security, Cost-Optimization, Well-Architected]
-excerpt: "클라우드 보안 과정 7기 3주차에서 다룬 AWS 보안 및 FinOps, 아키텍처 심화 내용을 정리했습니다. AWS 환경에서의 보안 강화 및 아키텍처 최적화, 실무에 바로 적용 가능한 FinOps 전략을 다룹니다."
+excerpt: "클라우드 시큐리티 과정 7기 3주차: AWS 보안 서비스 전체 구조(IAM, Organizations, CloudTrail, Config, Security Hub), IAM 보안 모범 사례, FinOps 프레임워크 및 비용 최적화 전략, AWS Well-Architected Framework 보안 및 비용 최적화, 실무 적용 가능한 FinOps 전략까지 정리."
 comments: true
 toc: true
 original_url: https://twodragon.tistory.com/679
