--- a/_posts/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.md
+++ b/_posts/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.md
@@ -4,7 +4,7 @@ title: "클라우드 보안 과정 7기 - 4주차 AWS 취약점 점검 및 ISMS 
 date: 2025-05-09 17:35:20 +0900
 categories: cloud
 tags: [AWS, ISMS, Vulnerability, Compliance]
-excerpt: "안녕하세요, Twodragon입니다.이번 4주차에서는 AWS 취약점 점검 및 ISMS-P 인증 대응을 중심으로 실무에 꼭 필요한 보안 역량을 다집니다. 강의는 20분 발표 + 5분 휴식으로 구성되며, 집중력 향상과 피로도 최소화를 목표로 합니다. 10:00 - 10:20 근황 토크 & 과제 피드백 한 주간의 근황 공유 및 토론"
+excerpt: "클라우드 보안 과정 7기 4주차: AWS 취약점 점검 도구 활용(Security Hub, Inspector, Trusted Advisor), ISMS-P 인증 대응 실무 가이드(보안 감사 프로세스, 컴플라이언스 대응), AWS 환경 규정 준수 구현, 실무 중심 보안 역량 강화(20분 강의 + 5분 휴식 루틴)까지 정리."
 comments: true
 original_url: https://twodragon.tistory.com/682
 image: /assets/images/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.svg
