--- a/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
+++ b/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
@@ -4,7 +4,7 @@ title: "클라우드 시큐리티 과정 7기 - 9주차: DevSecOps 통합 정리
 date: 2025-06-13 23:48:33 +0900
 category: devsecops
 tags: [DevSecOps, Integration, Cloud-Security, SDLC, Security-Automation]
-excerpt: "안녕하세요, **Twodragon**입니다. 이번 포스트에서는 클라우드 보안 과정 7기의 마지막 주차로, 지금까지 배운 **DevSecOps 전체 내용을 통합 정리**합니다. 이론부터 실무 적용까지 전체 그림을 조망해보겠습니다."
+excerpt: "클라우드 시큐리티 과정 7기 9주차: DevSecOps 통합 정리. DevSecOps 파이프라인 전체 아키텍처 및 보안 도구 매핑(Plan→Code→Build→Test→Release→Deploy→Operate→Monitor), AWS 보안 서비스 통합(GuardDuty 자동 대응, Security Hub, EventBridge), DevSecOps 성숙도 모델 및 단계별 도입 전략, 실무 적용 체크리스트까지 정리."
 comments: true
 toc: true
 original_url: https://twodragon.tistory.com/691
