--- a/_posts/2025-09-16-AWS_reInforce_2025_클라우드_보안의_현재와_미래_.md
+++ b/_posts/2025-09-16-AWS_reInforce_2025_클라우드_보안의_현재와_미래_.md
@@ -4,7 +4,7 @@ title: "AWS re:Inforce 2025: 클라우드 보안의 현재와 미래 🛡️"
 date: 2025-09-16 23:09:44 +0900
 categories: cloud
 tags: [AWS, reInforce, Cloud-Security, Conference]
-excerpt: "2025년 6월 필라델피아에서 개최된 AWS re:Inforce는 5,800명의 보안 전문가들이 모여 클라우드 보안의 최신 트렌드와 기술을 공유하는 장이었습니다. 특히 한국 참가자가 전년 대비 2배 증가하며 국내 기업들의 클라우드 보안에 대한 관심이 높아지고 있음을 보여주었습니다."
+excerpt: "AWS re:Inforce 2025 회고: 5,800명 보안 전문가 참석(한국 참가자 전년 대비 2배 증가). AI 기반 보안 솔루션(GuardDuty, Detective, Security Hub), Zero Trust 아키텍처 및 AWS 구현 방법, AWS 보안 서비스 업데이트(GuardDuty Extended, Security Hub GA, WAF 개선), 클라우드 보안 미래 트렌드까지 정리."
 comments: true
 original_url: https://twodragon.tistory.com/693
 image: /assets/images/2025-09-16-AWS_reInforce_2025_클라우드_보안의_현재와_미래_.svg
