--- a/_posts/2025-10-02-Karpenter_v153_노드_통합으로_인한_대규모_장애_분석_및_해결기.md
+++ b/_posts/2025-10-02-Karpenter_v153_노드_통합으로_인한_대규모_장애_분석_및_해결기.md
@@ -4,7 +4,7 @@ title: "Karpenter v1.5.3 노드 통합으로 인한 대규모 장애 분석 및 
 date: 2025-10-02 17:25:43 +0900
 category: incident
 tags: [Karpenter, Kubernetes, AWS, Post-Mortem, Incident, EKS]
-excerpt: "Karpenter v1.5.3의 공격적인 노드 통합(Consolidation) 정책과 PodDisruptionBudget 미설정으로 인해 프로덕션 환경에서 20개 이상의 Pod가 동시에 재시작되며 약 10분간 서비스 장애가 발생했습니다. 이 글에서는 장애의 근본 원인 분석부터 해결 방안까지 상세히 다룹니다."
+excerpt: "Karpenter v1.5.3 노드 통합 장애 분석: 공격적 Consolidation 정책과 PodDisruptionBudget 미설정으로 20개 이상 Pod 동시 재시작, 약 10분간 서비스 장애 발생. 근본 원인 분석, NodePool 설정 수정(Consolidation 정책 조정), PodDisruptionBudget 적용을 통한 재발 방지 대책, Karpenter v1.0 GA 업데이트 반영까지 실무 중심 정리."
 comments: true
 toc: true
 original_url: https://twodragon.tistory.com/695
