--- a/_posts/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.md
+++ b/_posts/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.md
@@ -4,7 +4,7 @@ title: "클라우드 시큐리티 8기 1주차: 인프라의 본질부터 보안
 date: 2025-11-26 19:36:52 +0900
 categories: cloud
 tags: [Infrastructure, Cloud-Security, AWS]
-excerpt: "안녕하세요, Twodragon입니다. 드디어 기다리던 클라우드 시큐리티 과정 8기가 힘차게 닻을 올렸습니다! 이번 8기는 온라인미팅에서, '20분 강의 + 5분 휴식'이라는 뇌과학적으로 가장 효율적인 학습 루틴으로 진행됩니다. 단순한 이론 주입식 교육이 아닌, 실무의 고민을 함께 나누는 시간이었습니다. 1주차 핵심 내용을 블로그를 통해 정리해 드립니다."
+excerpt: "클라우드 시큐리티 8기 1주차: 인프라의 본질부터 보안의 미래까지. 2025년 클라우드 보안 핵심 트렌드(AI 보안 위협과 대응, Zero Trust 아키텍처, Post-quantum 암호화, 공급망 보안), 클라우드 인프라 기초 학습, 실무 중심 보안 교육(20분 강의 + 5분 휴식 루틴), 보안의 미래와 실무 고민 공유까지 정리."
 comments: true
 original_url: https://twodragon.tistory.com/701
 image: /assets/images/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.svg
