fix: Jekyll 빌드 에러 수정 - YAML front matter category/categories 충돌 해결
- category(단수)와 categories(복수) 동시 사용으로 인한 Jekyll 빌드 에러 수정
- 모든 포스트 파일에서 category 제거하고 categories만 사용하도록 통일
- 카테고리 값 소문자로 통일 (devsecops, security, cloud 등)
- 수정된 파일: 8개 포스트 파일의 YAML front matter

--- a/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
+++ b/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
@@ -4,7 +4,7 @@ title: "클라우드 시큐리티 과정 7기 - 3주차: AWS 보안 및 FinOps"
 date: 2025-05-02 00:41:54 +0900
 category: cloud
 tags: [AWS, FinOps, Cloud-Security, Cost-Optimization, Well-Architected]
-excerpt: "클라우드 시큐리티 과정 7기 3주차: AWS 보안 서비스 전체 구조(IAM, Organizations, CloudTrail, Config, Security Hub), IAM 보안 모범 사례, FinOps 프레임워크 및 비용 최적화 전략, AWS Well-Architected Framework 보안 및 비용 최적화, 실무 적용 가능한 FinOps 전략까지 정리."
+excerpt: "클라우드 시큐리티 과정 7기 3주차: AWS 보안 서비스 전체 구조(IAM Identity Center, Organizations SCP, CloudTrail 감사, Config 규칙, Security Hub 중앙 집중 보안, GuardDuty 위협 탐지, Inspector 취약점, Macie 데이터, Detective 포렌식, WAF/Shield/Firewall Manager, KMS/Secrets Manager), IAM 보안 모범 사례(최소 권한, IP 기반 접근 제어, MFA 필수, 조건부 정책, VPC 보안 Security Group/NACL/Flow Logs, GuardDuty 자동 대응 Lambda/SNS), FinOps 프레임워크(Inform 가시성/Optimize 비용 최적화/Operate 운영 관리, 비용 할당/태깅/예산/예측/이상 탐지/Reserved Instance/Savings Plans/Right Sizing), 비용 최적화 전략(일관된 리소스 태깅, Cost Explorer API, 월간 비용 분석), AWS Well-Architected Framework까지 정리."
 comments: true
 toc: true
 original_url: https://twodragon.tistory.com/679
@@ -37,9 +37,11 @@ image: /assets/images/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차
   <div class="summary-row highlights">
     <span class="summary-label">핵심 내용</span>
     <ul class="summary-list">
-      <li>AWS 보안 서비스 전체 구조 및 IAM 보안 모범 사례</li>
-      <li>FinOps 프레임워크 및 비용 최적화 전략</li>
-      <li>AWS 환경에서의 보안 강화 및 아키텍처 최적화</li>
+      <li><strong>AWS 보안 서비스 구조</strong>: IAM(Identity Center), Organizations(SCP), CloudTrail(감사), Config(규칙), Security Hub(중앙 집중 보안), GuardDuty(위협 탐지), Inspector(취약점), Macie(데이터), Detective(포렌식), WAF, Shield, Firewall Manager, KMS, Secrets Manager</li>
+      <li><strong>IAM 보안 모범 사례</strong>: 최소 권한 원칙, IP 기반 접근 제어, MFA 필수, 조건부 정책, VPC 보안 구성(Security Group, NACL, Flow Logs), GuardDuty 자동 대응(Lambda 기반 격리, SNS 알림)</li>
+      <li><strong>FinOps 프레임워크</strong>: Inform(가시성 확보), Optimize(비용 최적화), Operate(운영 관리), Capabilities(비용 할당/태깅, 예산/예측, 이상 탐지, Reserved Instance/Savings Plans, Right Sizing)</li>
+      <li><strong>비용 최적화 전략</strong>: 일관된 리소스 태깅 전략(Environment, Project, Owner, CostCenter), AWS Cost Explorer API 활용, 월간 비용 분석 및 이상 탐지, Reserved Instance/Savings Plans 최적화</li>
+      <li><strong>AWS Well-Architected Framework</strong>: 보안 및 비용 최적화 관점에서의 아키텍처 설계, 보안과 비용의 균형, 실무 적용 가능한 FinOps 전략</li>
     </ul>
   </div>
   <div class="summary-row">
