--- a/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
+++ b/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
@@ -37,9 +37,10 @@ image: /assets/images/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차
   <div class="summary-row highlights">
     <span class="summary-label">핵심 내용</span>
     <ul class="summary-list">
-      <li>DevSecOps 파이프라인 전체 아키텍처 및 보안 도구 매핑</li>
-      <li>AWS 보안 서비스 통합 및 GuardDuty 자동 대응</li>
-      <li>DevSecOps 성숙도 모델 및 단계별 도입 전략</li>
+      <li><strong>DevSecOps 파이프라인 아키텍처</strong>: 전체 파이프라인(Plan→Code→Build→Test→Release→Deploy→Operate→Monitor), 보안 도구 매핑(STRIDE/OWASP Threat Dragon, Semgrep/SonarQube/Gitleaks, Trivy/Snyk, OWASP ZAP/Burp Suite, Cosign/Syft, Checkov/OPA/Kyverno, Falco/Sysdig, Datadog/Splunk/ELK)</li>
+      <li><strong>AWS 보안 서비스 통합</strong>: GuardDuty 자동 대응(Lambda 기반 격리, SNS 알림), Security Hub 통합 보안 관리, EventBridge 이벤트 기반 자동화, CloudWatch 로그 분석</li>
+      <li><strong>DevSecOps 성숙도 모델</strong>: 단계별 도입 전략(초기→성장→성숙→최적화), 보안 통합 수준 평가, 실무 적용 체크리스트, 문화 및 프로세스 변화</li>
+      <li><strong>완전한 CI/CD 보안 파이프라인</strong>: 코드 보안 분석(Secret Scanning, SAST), 빌드 보안(SCA, 이미지 스캔), 배포 보안(IaC 스캔, Policy 검증), 운영 보안(런타임 보안, 모니터링)</li>
     </ul>
   </div>
   <div class="summary-row">
