docs: 포스트 가독성 개선 - 빠른 참조 섹션 및 표 형태 요약 정보 추가
- 모든 포스트에 빠른 참조(📊 빠른 참조) 섹션 추가
- 핵심 정보를 표 형태로 정리 (비교표, 설정표, 체크리스트 등)
- Tesla FSD 포스트: 일본/중국 보조금 정보 상세 보강
- 주요 포스트 개선:
  * Tesla FSD 2026
  * OWASP 2025
  * DevSecOps 로드맵
  * Zscaler
  * Karpenter 장애 분석
  * 블록체인 보안
  * 자동차 보안
  * Cloudflare Post-Mortem
  * NPM Shai-Hulud
  * SendGrid
- 표 형태 요약 정보로 빠른 정보 파악 가능하도록 개선

--- a/_posts/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.md
+++ b/_posts/2025-05-09-클라우드_보안_과정_7기_-_4주차_AWS_취약점_점검_및_ISMS_대응_가이드.md
@@ -8,6 +8,7 @@ excerpt: "클라우드 보안 과정 7기 4주차: AWS 취약점 점검 도구(S
 comments: true
 original_url: https://twodragon.tistory.com/682
 image: /assets/images/2025-05-09-Cloud_Security_Course_7Batch_-_4Week_AWS_Vulnerability_Inspection_and_ISMS_Response_Guide.svg
+image_alt: "Cloud Security Course 7Batch 4Week: AWS Vulnerability Inspection and ISMS Response Guide"
 ---
 <div class="ai-summary-card">
 <div class="ai-summary-header">
@@ -63,8 +64,7 @@ image: /assets/images/2025-05-09-Cloud_Security_Course_7Batch_-_4Week_AWS_Vulner
 이 글에서는 클라우드 보안 과정 7기 - 4주차 AWS 취약점 점검 및 ISMS 대응 가이드에 대해 실무 중심으로 상세히 다룹니다.
 
 
-<img src="{{ '/assets/images/2025-05-09-Cloud_Security_Course_7Batch_-_4Week_AWS_Vulnerability_Inspection_and_ISMS_Response_Guide_image.png' | relative_url }}" alt="포스트 이미지" loading="lazy" class="post-image">
-*그림: 포스트 이미지*
+<img src="{{ '/assets/images/2025-05-09-Cloud_Security_Course_7Batch_-_4Week_AWS_Vulnerability_Inspection_and_ISMS_Response_Guide_image.png' | relative_url }}" alt="Cloud Security Course 7Batch 4Week: AWS Vulnerability Inspection and ISMS Response Guide" loading="lazy" class="post-image">
 
 
 ## 1. 개요
