--- a/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
+++ b/_posts/2025-06-13-클라우드_시큐리티_과정_7기_-_9주차_DevSecOps_통합_정리.md
@@ -9,6 +9,7 @@ comments: true
 toc: true
 original_url: https://twodragon.tistory.com/691
 image: /assets/images/2025-06-13-Cloud_Security_Course_7Batch_-_9Week_DevSecOps_Integration.svg
+image_alt: "Cloud Security Course 7Batch 9Week: DevSecOps Integration Summary"
 ---
 
 <div class="ai-summary-card">
@@ -59,8 +60,7 @@ image: /assets/images/2025-06-13-Cloud_Security_Course_7Batch_-_9Week_DevSecOps_
 
 
 
-<img src="{{ '/assets/images/2025-06-13-Cloud_Security_Course_7Batch_-_9Week_DevSecOps_Integration_image.png' | relative_url }}" alt="포스트 이미지" loading="lazy" class="post-image">
-*그림: 포스트 이미지*
+<img src="{{ '/assets/images/2025-06-13-Cloud_Security_Course_7Batch_-_9Week_DevSecOps_Integration_image.png' | relative_url }}" alt="Cloud Security Course 7Batch 9Week: DevSecOps Integration Summary" loading="lazy" class="post-image">
 
 
 ## 1. DevSecOps 전체 아키텍처
