--- a/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
+++ b/_posts/2025-09-10-긴급_npm_생태계_대규모_보안_침해_20억_다운로드_패키지_악성코드_감염.md
@@ -9,6 +9,7 @@ comments: true
 toc: true
 original_url: https://twodragon.tistory.com/692
 image: /assets/images/2025-09-10-npm_Large-scale_Security_20.svg
+image_alt: "Urgent: npm Ecosystem Large-Scale Security Breach: 2 Billion Download Packages Malware Infection"
 ---
 
 <div class="ai-summary-card">
@@ -59,8 +60,7 @@ image: /assets/images/2025-09-10-npm_Large-scale_Security_20.svg
 
 
 
-<img src="{{ '/assets/images/2025-09-10-npm_Large-scale_Security_20_image.jpg' | relative_url }}" alt="포스트 이미지" loading="lazy" class="post-image">
-*그림: 포스트 이미지*
+<img src="{{ '/assets/images/2025-09-10-npm_Large-scale_Security_20_image.jpg' | relative_url }}" alt="Urgent: npm Ecosystem Large-Scale Security Breach: 2 Billion Download Packages Malware Infection" loading="lazy" class="post-image">
 
 
 ## 긴급 공지
