--- a/_posts/2025-12-19-클라우드_시큐리티_8기_4주차_통합_보안_취약점_점검_및_ISMS-P_인증_대응_실무.md
+++ b/_posts/2025-12-19-클라우드_시큐리티_8기_4주차_통합_보안_취약점_점검_및_ISMS-P_인증_대응_실무.md
@@ -8,6 +8,7 @@ excerpt: "클라우드 시큐리티 8기 4주차: 통합 보안 취약점 점검
 comments: true
 original_url: https://twodragon.tistory.com/705
 image: /assets/images/2025-12-19-Cloud_Security_8Batch_4Week_Integration_Security_Vulnerability_Inspection_and_ISMS-P_Certification_Response.svg
+image_alt: "Cloud Security 8Batch 4Week: Integrated Security Vulnerability Inspection and ISMS-P Certification Response Practice"
 ---
 <div class="ai-summary-card">
 <div class="ai-summary-header">
@@ -61,8 +62,7 @@ image: /assets/images/2025-12-19-Cloud_Security_8Batch_4Week_Integration_Securit
 이 글에서는 클라우드 시큐리티 8기 4주차: 통합 보안 취약점 점검 및 ISMS-P 인증 대응 실무에 대해 실무 중심으로 상세히 다룹니다. 보안 모범 사례와 함께 구체적인 설정 방법을 공유합니다.
 
 
-<img src="{{ '/assets/images/2025-12-19-Cloud_Security_8Batch_4Week_Integration_Security_Vulnerability_Inspection_and_ISMS-P_Certification_Response_image.png' | relative_url }}" alt="포스트 이미지" loading="lazy" class="post-image">
-*그림: 포스트 이미지*
+<img src="{{ '/assets/images/2025-12-19-Cloud_Security_8Batch_4Week_Integration_Security_Vulnerability_Inspection_and_ISMS-P_Certification_Response_image.png' | relative_url }}" alt="Cloud Security 8Batch 4Week: Integrated Security Vulnerability Inspection and ISMS-P Certification Response Practice" loading="lazy" class="post-image">
 
 
 ## 1. 배경 및 필요성
