--- a/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
+++ b/_posts/2025-05-02-클라우드_시큐리티_과정_7기_-_3주차_AWS_보안_및_Finops.md
@@ -9,6 +9,7 @@ comments: true
 toc: true
 original_url: https://twodragon.tistory.com/679
 image: /assets/images/2025-05-02-Cloud_Security_Course_7Batch_-_3Week_AWS_Security_and_Finops.svg
+image_alt: "Cloud Security Course 7Batch 3Week: AWS Security and FinOps"
 ---
 
 <div class="ai-summary-card">
@@ -60,8 +61,7 @@ image: /assets/images/2025-05-02-Cloud_Security_Course_7Batch_-_3Week_AWS_Securi
 
 
 
-<img src="{{ '/assets/images/2025-05-02-Cloud_Security_Course_7Batch_-_3Week_AWS_Security_and_Finops_image.png' | relative_url }}" alt="포스트 이미지" loading="lazy" class="post-image">
-*그림: 포스트 이미지*
+<img src="{{ '/assets/images/2025-05-02-Cloud_Security_Course_7Batch_-_3Week_AWS_Security_and_Finops_image.png' | relative_url }}" alt="Cloud Security Course 7Batch 3Week: AWS Security and FinOps" loading="lazy" class="post-image">
 
 
 ## 1. AWS 보안 아키텍처
