docs: Mermaid 다이어그램을 표 형태로 변환하여 가독성 개선
- SDV 보안 아키텍처 다이어그램을 표 형태로 변환
- Zero Trust 인증 프로세스 다이어그램을 표 형태로 변환
- GitHub + Cloudflare 통합 보안 파이프라인 다이어그램을 표 형태로 변환
- Jekyll에서 Mermaid 렌더링 이슈 해결을 위해 표 형태로 대체

--- a/_posts/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.md
+++ b/_posts/2025-11-26-클라우드_시큐리티_8기_1주차_인프라의_본질부터_보안의_미래까지.md
@@ -182,25 +182,32 @@ ai_security_threats:
 
 2025년 Zero Trust는 단순한 네트워크 분할을 넘어섰습니다:
 
-```mermaid
-graph TB
-    A[사용자 요청] --> B[Identity Verification]
-    B --> C[Device Trust Assessment]
-    C --> D[Context Analysis]
-    D --> E{Risk Score}
-    E -->|Low| F[Full Access]
-    E -->|Medium| G[Limited Access + MFA]
-    E -->|High| H[Block + Alert]
+**Zero Trust 인증 및 접근 제어 프로세스**:
 
-    I[Continuous Monitoring] --> B
-    I --> C
-    I --> D
+| 단계 | 프로세스 | 설명 | 결과 |
+|------|---------|------|------|
+| 1 | 사용자 요청 | 사용자가 리소스 접근 요청 | - |
+| 2 | Identity Verification | 사용자 신원 확인 | 인증 성공/실패 |
+| 3 | Device Trust Assessment | 디바이스 신뢰성 평가 | 디바이스 상태 확인 |
+| 4 | Context Analysis | 컨텍스트 분석 (위치, 시간, 행동 패턴) | 위험도 평가 |
+| 5 | Risk Score 계산 | 종합 위험도 점수 계산 | Low/Medium/High |
+| 6 | 접근 제어 결정 | 위험도에 따른 접근 권한 부여 | Full/Limited/Block |
 
-    style B fill:#4285f4
-    style C fill:#34a853
-    style D fill:#fbbc04
-    style H fill:#ea4335
-```
+**위험도별 접근 제어 정책**:
+
+| 위험도 | 접근 권한 | 추가 조치 | 설명 |
+|--------|----------|----------|------|
+| **Low** | Full Access | 없음 | 신뢰할 수 있는 사용자/디바이스 |
+| **Medium** | Limited Access | MFA 필수 | 부분적 신뢰, 제한적 접근 |
+| **High** | Block + Alert | 보안 팀 알림 | 의심스러운 활동, 접근 차단 |
+
+**지속적 모니터링**:
+
+| 모니터링 대상 | 설명 | 목적 |
+|-------------|------|------|
+| **Identity Verification** | 사용자 인증 상태 지속 확인 | 세션 하이재킹 방지 |
+| **Device Trust Assessment** | 디바이스 상태 실시간 모니터링 | 디바이스 변조 탐지 |
+| **Context Analysis** | 사용자 행동 패턴 분석 | 이상 행위 탐지 |
 
 #### Zero Trust 2025 핵심 원칙
 1. **지속적 검증**: 세션 내 지속적인 신뢰도 평가
